<resources>
    <string name="app_name">MCQ quiz</string>
    <string name="question1">An organism that can monitor air pollution is</string>
    <string name="question2">Translocation of water is</string>
    <string name="question3">Green blocks are referred to</string>
    <string name="question4">One of the best solutions to get rid of biodegradable waste is</string>
    <string name="question5">The environment include</string>
    <string name="question6">Identify correct statement to biogas</string>
    <string name="question7">Lowest cell of an algae is called</string>
    <string name="question8">What is a symbiotic microbial relationship example? </string>


</resources>



